# CurveCraft

./: .env.example  .gitignore  AGENTS.md  CONTRIBUTING.md  LICENSE  README.md  pyproject.toml  requirements.txt  sitecustomize.py
.github/: CONFIGURATION.md  PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: ci.yml  tests.yml
docs/: README.md
docs/images/: README.md
fixed_income/api/: main.py  schemas.py
fixed_income/bonds/: bond.py
fixed_income/curves/: __init__.py  bootstrapper.py  zero_curve.py
fixed_income/portfolio/: portfolio.py
fixed_income/utils/: schedule.py
fixed_income/visualization/: __init__.py  plots.py
notebooks/: README.md  demo.ipynb
scripts/: README.md  generate_readme_assets.py  validate_phase_1.py  validate_phase_3.py  validate_phase_4.py  validate_phase_5.py  validate_phase_6.py  validate_phase_7.py  validate_phase_8.py  validate_phase_9.py
src/fixed_income/: README.md  __init__.py
src/fixed_income/analytics/: README.md  __init__.py  convexity.py  duration.py  dv01.py  (+1 more)
tests/: README.md  conftest.py  test_api.py  test_bonds.py  test_portfolio.py
tests/analytics/: README.md  test_analytics.py  test_analytics_placeholder.py
tests/api/: README.md  test_api.py  test_api_exceptions.py  test_api_placeholder.py
tests/bonds/: README.md  test_bonds_placeholder.py
tests/curves/: README.md  test_curves.py  test_curves_placeholder.py
tests/portfolio/: README.md  test_portfolio_placeholder.py
tests/visualization/: README.md  test_visualization.py  test_visualization_placeholder.py
(+26 files in other folders)
