[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "curvecraft"
version = "0.2.0"
description = "Fixed income pricing, curve construction, and risk analytics library."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [
  { name = "CurveCraft Contributors" }
]
dependencies = [
  "numpy>=1.26,<3.0",
  "pandas>=2.2,<3.0",
  "scipy>=1.13,<2.0",
  "plotly>=5.24,<6.0",
  "kaleido>=0.2.1,<1.0",
  "fastapi>=0.115,<1.0",
  "uvicorn>=0.30,<1.0",
  "pydantic>=2.9,<3.0",
  "httpx>=0.27,<1.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.3,<9.0",
  "ruff>=0.11,<1.0",
]

[tool.setuptools.packages.find]
where = ["src"]
include = ["fixed_income*"]

[tool.ruff]
line-length = 120
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I"]
